flux/infrastructure/vault/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: vault
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8200
    - name: server
      port: 8201
  selector:
    app: "vault"
