flux/infrastructure/vault/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-staging
    external-dns.alpha.kubernetes.io/hostname: vault.${subdomain}.${domain}.
  name: vault-ingress
  namespace: vault
spec:
  ingressClassName: "ingress-nginx"
  rules:
  - host: vault.${subdomain}.${domain}
    http:
      paths:
      - backend:
          service:
            name: vault
            port:
              number: 8200
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - vault.${subdomain}.${domain}
    secretName: vault-tls
  # will enable after installing cert manager :)
